force-app/main/default/objects/purecloud__PureCloud_Routing_Request__c/fields/purecloud__Inbound_Email_Flow__c.field-meta.xml
<CustomField>
    <fullName>purecloud__Inbound_Email_Flow__c</fullName>
    <label>Inbound Email Flow</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Please configure</fullName>
                <color>#FFFFFF</color>
                <label>Please configure</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>