force-app/main/default/objects/purecloud__PureCloud_Routing_Request__c/fields/purecloud__Skills__c.field-meta.xml
<CustomField>
    <fullName>purecloud__Skills__c</fullName>
    <label>Skills</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Please configure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>